--- a/meetings.html
+++ b/meetings.html
@@ -39,7 +39,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> and course recommendation website.</p>
+            <p>This is an <em>educational and course recommendation</em> website.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
