--- a/Courses.html
+++ b/Courses.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="index.html">Home</a></li>
-                          <li><a href="meetings.html" class="active">Meetings</a></li>
+                          <li><a href="Courses.html" class="active">Courses</a></li>
                           <li><a href="index.html">Apply Now</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
