--- a/Courses.html
+++ b/Courses.html
@@ -71,16 +71,16 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li><a href="index.html">Home</a></li>
                           <li><a href="Courses.html" class="active">Courses</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
                           <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
+                              <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
                                   <li><a href="meetings.html">Upcoming Meetings</a></li>
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
-                          <li><a href="index.html">Courses</a></li> 
                           <li><a href="index.html">Contact Us</a></li> 
+
+                          <li><a href="index.html">My Profile</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -97,8 +97,8 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Here are our upcoming meetings</h6>
-          <h2>Upcoming Meetings</h2>
+          <h6>Hello, Nouran Hassan !</h6>
+          <h2>Let's dive into learning</h2>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="filters">
                 <ul>
-                  <li data-filter="*"  class="active">All Meetings</li>
+                  <li data-filter="*"  class="active">All Courses</li>
                   <li data-filter=".soon">Soon</li>
                   <li data-filter=".imp">Important</li>
                   <li data-filter=".att">Attractive</li>
