--- a/Courses.html
+++ b/Courses.html
@@ -63,14 +63,13 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="col-12">
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
+                      <a href="Courses.html" class="logo">
                           MegaMinds
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="Courses.html" class="active">Courses</a></li>
+                          <li><a href="Courses.html" class="active">My Courses</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
@@ -78,9 +77,10 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
-                          <li><a href="index.html">Contact Us</a></li> 
-
                           <li><a href="index.html">My Profile</a></li> 
+                          
+                          <li><a href="index.html">Sign out</a></li> 
+
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
