just thinking of something

--- a/Courses.html
+++ b/Courses.html
@@ -131,7 +131,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>12</span></h6>
+                        <h6>Month <span>1</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>New Lecturers Meeting</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -148,7 +148,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>14</span></h6>
+                        <h6>Mins <span>60</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -165,7 +165,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>16</span></h6>
+                        <h6>Months <span>2</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Network Teaching Concept</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -182,7 +182,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>18</span></h6>
+                        <h6>Hours <span>12</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Online Teaching Tools</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -199,7 +199,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>22</span></h6>
+                        <h6>Hours <span>22</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>New Teaching Techniques</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -216,7 +216,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>24</span></h6>
+                        <h6>Minutes <span>24</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Technology Conference</h4></a>
                       <p>TemplateMo is the best website<br>when it comes to Free CSS.</p>
@@ -233,7 +233,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>27</span></h6>
+                        <h6>Hours <span>27</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>28</span></h6>
+                        <h6>Hours <span>28</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Instant Lecture Design</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
@@ -267,7 +267,7 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <div class="down-content">
                       <div class="date">
-                        <h6>Nov <span>30</span></h6>
+                        <h6>Weeks <span>30</span></h6>
                       </div>
                       <a href="meeting-details.html"><h4>Online Social Networking</h4></a>
                       <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
