changing the words

--- a/Courses.html
+++ b/Courses.html
@@ -113,9 +113,9 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="filters">
                 <ul>
                   <li data-filter="*"  class="active">All Courses</li>
-                  <li data-filter=".soon">Soon</li>
-                  <li data-filter=".imp">Important</li>
-                  <li data-filter=".att">Attractive</li>
+                  <li data-filter=".soon">Current Courses</li>
+                  <li data-filter=".imp">Recommeded Courses</li>
+                  <li data-filter=".att">Meetings</li>
                 </ul>
               </div>
             </div>
