--- a/meeting-details.html
+++ b/meeting-details.html
@@ -64,23 +64,22 @@ https://templatemo.com/tm-569-edu-meeting
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          Edu Meeting
+                          MegaMinds
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="Courses.html" class="active">Meetings</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
+                          <li><a href="Courses.html">My Courses</a></li>
+                         
                           <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
+                              <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
                                   <li><a href="Courses.html">Upcoming Meetings</a></li>
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
-                          <li><a href="index.html">Courses</a></li> 
-                          <li><a href="index.html">Contact Us</a></li> 
+                          <li><a href="Courses.html">My Profile</a></li> 
+                          <li><a href="index.html">Sign Out</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
