adding cart button to the course details

--- a/meeting-details.html
+++ b/meeting-details.html
@@ -156,6 +156,9 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="#">Linkedin</a>,</li>
                           <li><a href="#">Behance</a></li>
                         </ul>
+                        <div class="main-button-red">
+                          <a href="">Add To Cart</a>
+                        </div>
                       </div>
                     </div>
                   </div>
