--- a/meeting-details.html
+++ b/meeting-details.html
@@ -165,7 +165,10 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
               </div>
             </div>
-            
+            <div class="col-lg-12">
+             <!-- ha7ot hena el feed back of the courses -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
