--- a/Courses.html
+++ b/Courses.html
@@ -70,6 +70,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="Courses.html" class="active">My Courses</a></li>
+                          <li><a href="cart-page.html">My Cart</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
