--- a/cart-page.html
+++ b/cart-page.html
@@ -69,8 +69,8 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li><a href="Courses.html">My Courses</a></li>
-                          <li><a href="cart-page.html">My Cart</a></li> 
+                          <li><a href="Courses.html" >My Courses</a></li>
+                          <li><a href="cart-page.html" class="active">My Cart</a></li> 
                           <li class="has-sub">
                               <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
@@ -96,8 +96,8 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Get all details</h6>
-          <h2>Online Teaching and Learning Tools</h2>
+          <h6>Get all my courses</h6>
+          <h2>My Cart</h2>
         </div>
       </div>
     </div>
@@ -115,23 +115,17 @@ https://templatemo.com/tm-569-edu-meeting
                     <span>$14.00</span>
                   </div>
                   <div class="date">
-                    <h6>Nov <span>12</span></h6>
+                    <h6>Jan <span>3</span></h6>
                   </div>
                   <a href="meeting-details.html"><img src="assets/images/single-meeting.jpg" alt=""></a>
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
-                  <p>Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008, Brazil</p>
-                  <p class="description">
-                    This is an edu meeting HTML CSS template provided by <a href="https://templatemo.com/" target="_blank" rel="nofollow">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. If you need more free website templates like this one, please visit our website TemplateMo. Please tell your friends about our website. Thank you. If you want to get the latest collection of HTML CSS templates for your websites, you may visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">Too CSS website</a>. If you need a working contact form script, please visit <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more info.
-                    
-                    <br><br>You are allowed to use this edu meeting CSS template for your school or university or business. You can feel free to modify or edit this layout. You are not allowed to redistribute the template ZIP file on any other template website. Please contact us for more information.
-                  </p>
                   <div class="row">
                     <div class="col-lg-4">
                       <div class="hours">
                         <h5>Hours</h5>
-                        <p>Monday - Friday: 07:00 AM - 13:00 PM<br>Saturday- Sunday: 09:00 AM - 15:00 PM</p>
+                        <p>Monday - Friday: 07:00 AM - 13:00 PM</p>
                       </div>
                     </div>
                     <div class="col-lg-4">
@@ -141,29 +135,50 @@ https://templatemo.com/tm-569-edu-meeting
                         <br>Rio de Janeiro - RJ, 22795-008, Brazil</p>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+
+              <br>
+
+              <div class="meeting-single-item">
+                <div class="thumb">
+                  <div class="price">
+                    <span>$20.60</span>
+                  </div>
+                  <div class="date">
+                    <h6>Nov <span>12</span></h6>
+                  </div>
+                  <a href="meeting-details.html"><img src="assets/images/single-meeting.jpg" alt=""></a>
+                </div>
+                <div class="down-content">
+                  <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
+                  <div class="row">
                     <div class="col-lg-4">
-                      <div class="book now">
-                        <h5>Book Now</h5>
-                        <p>010-020-0340<br>090-080-0760</p>
+                      <div class="hours">
+                        <h5>Hours</h5>
+                        <p>Monday - Friday: 07:00 AM - 13:00 PM</p>
                       </div>
                     </div>
-                    <div class="col-lg-12">
-                      <div class="share">
-                        <h5>Share:</h5>
-                        <ul>
-                          <li><a href="#">Facebook</a>,</li>
-                          <li><a href="#">Twitter</a>,</li>
-                          <li><a href="#">Linkedin</a>,</li>
-                          <li><a href="#">Behance</a></li>
-                        </ul>
-                        <div class="main-button-red">
-                          <a href="">Add To Cart</a>
-                        </div>
+                    <div class="col-lg-4">
+                      <div class="location">
+                        <h5>Location</h5>
+                        <p>Recreio dos Bandeirantes, 
+                        <br>Rio de Janeiro - RJ, 22795-008, Brazil</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="main-button-red">
+              <div class="row">
+                <div class="col-lg-4">
+                  <br>
+                <h3 style="color: aliceblue;">Total Price: $34.60</h3>
+                </div>
+              </div>
+              <a href="">Check out now!</a>
             </div>
             <div class="col-lg-12">
              <!-- ha7ot hena el feed back of the courses -->
