changing a label in the nav

--- a/Courses.html
+++ b/Courses.html
@@ -70,7 +70,6 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="Courses.html" class="active">My Courses</a></li>
-                          <li><a href="cart-page.html">My Cart</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Meetings</a>
                               <ul class="sub-menu">
@@ -78,6 +77,8 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
+                          <li><a href="cart-page.html">Cart</a></li> 
+
                           <li><a href="index.html">My Profile</a></li> 
                           
                           <li><a href="index.html">Sign out</a></li> 
