--- a/meeting-details.html
+++ b/meeting-details.html
@@ -109,6 +109,7 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
+                          <li><a href="cart-page.html">Cart</a></li> 
                           <li><a href="Courses.html">My Profile</a></li> 
                           <li><a href="index.html">Sign Out</a></li> 
                       </ul>        
