--- a/InsideCourse.html
+++ b/InsideCourse.html
@@ -128,8 +128,8 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Get all details</h6>
-          <h2>Online Teaching and Learning Tools</h2>
+          <h6>Improve your programming knowledge</h6>
+          <h2>Introduction to Computer Science</h2>
         </div>
       </div>
     </div>
