--- a/InsideCourse.html
+++ b/InsideCourse.html
@@ -30,6 +30,13 @@ https://templatemo.com/tm-569-edu-meeting
 -->
 <style>
 
+p,h2 .mb-3{
+  color:white;
+}
+.mb-3{
+  color:white;
+}
+
 </style>
   </head>
 
