el loon el ahmar el by7ebo

--- a/InsideCourse.html
+++ b/InsideCourse.html
@@ -21,8 +21,9 @@
 
     <style>
         .list-group-item.active {
-            background-color: #007bff; /* Change this color as needed */
+            background-color: #7d0909; /* Change this color as needed */
             color: white; /* Change text color for contrast */
+            border-color:#7d0909;
         }
 
         p,
