mesh fakra el commit dah kan eh

--- a/InsideCourse.html
+++ b/InsideCourse.html
@@ -21,9 +21,13 @@
 
     <style>
         .list-group-item.active {
-            background-color: #7d0909; /* Change this color as needed */
+            background-color: #007bff; /* Change this color as needed */
             color: white; /* Change text color for contrast */
-            border-color:#7d0909;
+        }
+
+        .list-group-item.done {
+            color: green; /* Change text color for completed lessons */
+            text-decoration: line-through; /* Strikethrough for completed lessons */
         }
 
         p,
@@ -147,7 +151,7 @@
                             <h2 id="lesson-title">Lesson 1: Basics</h2>
                             <p id="lesson-description">Brief description of the Basics lecture content.</p>
                             <div class="embed-responsive mb-4">
-                                <iframe id="lesson-video" class="embed-responsive-item" src="https://www.youtube.com/embed/example1" allowfullscreen></iframe>
+                                <iframe id="lesson-video" class="embed-responsive-item" src="https://www.youtube.com/embed/8j9b_9Zy8C8" allowfullscreen></iframe>
                             </div>
                         </div>
 
@@ -183,6 +187,31 @@
     <script src="assets/js/slick-slider.js"></script>
     <script src="assets/js/custom.js"></script>
     <script>
+        // Load the IFrame Player API code asynchronously
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('lesson-video', {
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        function onPlayerReady(event) {
+            // Start tracking video progress
+            setInterval(checkVideoProgress, 1000); // Check every second
+        }
+
+        function onPlayerStateChange(event) {
+            // You can handle video state changes here if needed
+        }
+
         // Navigation functionality for Previous and Next buttons
         $(window).scroll(function () {
             checkSection();
@@ -198,35 +227,42 @@
                 if (topEdge < wScroll && bottomEdge > wScroll) {
                     var currentId = $this.attr('id'),
                         reqLink = $('li.list-group-item').filter(function () {
-                            return $(this).text().toLowerCase().includes(currentId.replace('lesson-', ''));
+                            return $(this).data('target') === currentId;
                         });
-
-                    reqLink.addClass('active').siblings().removeClass('active');
+                    $('li.list-group-item.active').removeClass('active');
+                    reqLink.addClass('active');
                 }
             });
         };
 
-        const lectures = [
-            { title: 'Lesson 1: Basics', description: 'Brief description of the Basics lecture content.', src: 'https://www.youtube.com/embed/example1' },
-            { title: 'Lesson 2: Advanced Topics', description: 'Brief description of the Advanced Topics lecture content.', src: 'https://www.youtube.com/embed/example2' },
-            { title: 'Lesson 3: Data Structures', description: 'Brief description of Data Structures lecture content.', src: 'https://www.youtube.com/embed/example3' }
+        var lectures = [
+            {
+                title: "Lesson 1: Basics",
+                description: "Brief description of the Basics lecture content.",
+                videoId: "8j9b_9Zy8C8" // Short video ID 1 (accessible)
+            },
+            {
+                title: "Lesson 2: Advanced Topics",
+                description: "Overview of advanced topics in Computer Science.",
+                videoId: "x9Erz5I4oT0" // Short video ID 2 (accessible)
+            },
+            {
+                title: "Lesson 3: Data Structures",
+                description: "Introduction to various data structures.",
+                videoId: "eWm1YpHIVrM" // Short video ID 3 (accessible)
+            }
         ];
 
-        let currentLectureIndex = 0;
+        var currentLectureIndex = 0;
 
-        const loadLecture = (index) => {
-            if (index >= 0 && index < lectures.length) {
-                const lecture = lectures[index];
-                document.getElementById('lesson-title').innerText = lecture.title;
-                document.getElementById('lesson-description').innerText = lecture.description;
-                document.getElementById('lesson-video').src = lecture.src;
+        var loadLecture = function (index) {
+            $('#lesson-title').text(lectures[index].title);
+            $('#lesson-description').text(lectures[index].description);
+            $('#lesson-video').attr('src', "https://www.youtube.com/embed/" + lectures[index].videoId);
+            $('li.list-group-item').removeClass('active');
+            $('li.list-group-item').eq(index).addClass('active');
 
-                // Update active class on the sidebar
-                $('li.list-group-item').removeClass('active');
-                $('li.list-group-item').eq(index).addClass('active');
-
-                currentLectureIndex = index; // Update the current index
-            }
+            currentLectureIndex = index; // Update the current index
         };
 
         document.getElementById('nextButton').onclick = function () {
@@ -240,6 +276,29 @@
                 loadLecture(currentLectureIndex - 1);
             }
         };
+
+        // Check video progress and mark as done
+        var videoDuration = 0;
+
+        function checkVideoProgress() {
+            if (player && player.getCurrentTime && player.getDuration) {
+                var currentTime = player.getCurrentTime();
+                videoDuration = player.getDuration();
+
+                // Check if 80% of the video has been watched
+                if (currentTime >= 0.8 * videoDuration) {
+                    markAsDone(currentLectureIndex);
+                }
+            }
+        }
+
+        function markAsDone(index) {
+            var lessonItem = $('li.list-group-item').eq(index);
+            if (!lessonItem.hasClass('done')) {
+                lessonItem.addClass('done');
+                lessonItem.append(' ✔'); // Append a check mark
+            }
+        }
 
         // Initial load
         loadLecture(currentLectureIndex);
